--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
 
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
     <title>FaceBrrk</title>
   </head>
   <body>
